analysis/symbol-light-classes/testData/lightClassByFqName/compilationErrors/unresolvedQuialifierInAnnotation.kt
// A

annotation class Ann(val kClass: KClass<*>)

@Ann(some.name.Unresolved::class)
class A
